style(listing): fixed issue with alignment of tags
I'd never had so many (lengthy) tags that they spanned multiple lines.
This resulted in tags being left-aligned, which was not the intent.
This commit should fix that issue.

--- a/src/app/blog/listing/listing-post/listing-post.component.scss
+++ b/src/app/blog/listing/listing-post/listing-post.component.scss
@@ -58,6 +58,7 @@ a {
   ul.tags {
     grid-area: tags;
     justify-self: end;
+    text-align: right;
   }
 }
 
